--- a/README.adoc
+++ b/README.adoc
@@ -24,7 +24,7 @@ buildscript {
         maven { url 'https://repo.spring.io/plugins-release' }
     }
     dependencies {
-        classpath 'io.spring.gradle:spring-io-plugin:0.0.6.RELEASE
+        classpath 'io.spring.gradle:spring-io-plugin:0.0.6.RELEASE'
     }
 }
 
